<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent">


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.yudihirata.br.popmovie.DetailsActivity">

    <ImageView
        android:id="@+id/iv_backdrop_poster"
        android:layout_width="0dp"
        android:layout_height="199dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:contentDescription="@string/description_backdrop_poster_image" />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="89dp"
        android:layout_height="132dp"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_poster"
        android:contentDescription="@string/description_poster_image" />
    <RatingBar
        style="?attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_rate"
        android:numStars="1"
        android:rating="8.8"
        app:layout_constraintLeft_toRightOf="@+id/iv_poster"
        app:layout_constraintTop_toBottomOf="@+id/fl_title"
        app:layout_constraintBottom_toTopOf="@+id/tx_date"
        android:contentDescription="@string/description_star_image"
        />

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_poster"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="89dp">
        <TextView
            android:textColor="@color/cardview_light_background"
            android:layout_margin="8dp"
            android:id="@+id/tx_title"
            android:textSize="22sp"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:text="@string/default_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />
    </FrameLayout>


    <TextView
        android:textColor="@color/cardview_light_background"
        android:id="@+id/tv_rate"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/rb_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_average"
        app:layout_constraintStart_toEndOf="@id/rb_rate"
        tools:layout_editor_absoluteX="150dp" />

    <TextView
        android:textColor="@color/cardview_light_background"
        android:id="@+id/tv_max_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_rate"
        app:layout_constraintLeft_toRightOf="@+id/tv_rate"
        android:layout_marginStart="2dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_rate"
        />
    <TextView
        android:textColor="@color/cardview_light_background"
        android:id="@+id/tv_vote_count"
        app:layout_constraintStart_toStartOf="@id/tv_rate"
        app:layout_constraintTop_toBottomOf="@+id/tv_max_rate"
        android:text="@string/vote_count"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="150dp" />

    <TextView
        android:textColor="@color/cardview_light_background"
        android:layout_margin="8dp"
        android:id="@+id/tx_date"
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="2dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_poster"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
        android:layout_marginStart="8dp" />


    <TextView
        android:textColor="@color/cardview_light_background"
        android:id="@+id/tv_synopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

</android.support.constraint.ConstraintLayout>
</ScrollView>